# ECommerce_API

./: README.MD
CartService/: Cargo.toml
CartService/src/: main.rs
CartService/src/config/: mod.rs
CartService/src/db/: mod.rs  model.rs
CartService/src/handlers/: mod.rs
CartService/src/middleware/: mod.rs
CartService/src/routes/: mod.rs
CartService/src/services/: mod.rs
CartService/src/utils/: mod.rs
ProductService/: package-lock.json  package.json
ProductService/src/: db.ts  index.ts  product.middleware.ts  product.routes.ts  product.service.ts  product.validateRequest.ts  product.validation.ts
ProductService/src/payments/: payment.service.ts  payments.routes.ts
ProductService/src/product/: product.algorithm.ts  product.errorHandler.ts  product.middleware.ts  product.model.ts  product.routes.ts  product.validateRequest.ts
UserService/: .env.dev  Cargo.toml  composer.json
UserService/config/: bundles.php  routes.yaml
UserService/config/routes/: security.yaml
UserService/src/: main.rs
UserService/src/Controller/: LoginFormAuthenticator.php  SecurityController.php  UserController.php
UserService/src/Entity/: User.php
UserService/src/Repository/: UserRepository.php
UserService/src/Security/: LoginFormAuthenticator.php
UserService/src/config/: mod.rs
UserService/src/db/: mod.rs  models.rs  token_blacklist.rs
UserService/src/handlers/: mod.rs
UserService/src/middleware/: mod.rs
UserService/src/routes/: mod.rs
UserService/src/services/: mod.rs
UserService/src/utils/: jwt.rs  mod.rs  validation.rs
