[package]
name = "cart_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.6"

# PostgreSQL database driver
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variable management
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# UUID for unique identifiers
uuid = { version = "1", features = ["v4"] }

# Validation
validator = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Testing utilities
tokio-test = "0.5"

[dev-dependencies]
# Testing utilities
assert-json-diff = "2.0"